namespace PortProject.Api.Domain.StaffMemberAggregate
{
    // Enum for Staff Status
    public enum StaffStatus
    {
        Unavailable,
        Available
        
    }
}

