@startuml
' US 2.2.11 - Domain Model
title US 2.2.11 - Manage Staff Members - Domain Model

skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle
hide methods

package "Staff Member Aggregate" {
    class StaffMember <<(A,orchid) Root>> {
        +MecanographicNumber: MecanographicNumber
        +ShortName: string
        +CurrentStatus: StaffStatus
        ---
        + AddQualification(Qualification)
        + RemoveQualification(Qualification)
        + UpdateStatus(StaffStatus)
    }

    class MecanographicNumber <<(V,DarkSeaGreen)>> {
        Value: string
    }

    class ContactDetails <<(V,DarkSeaGreen)>> {
        Email: string
        Phone: string
    }

    class OperationalWindow <<(V,DarkSeaGreen)>> {
        StartTime: TimeOnly
        EndTime: TimeOnly
        WorkingDays: DayOfWeek[*]
    }

    enum StaffStatus {
        Available
        Unavailable
    }

    StaffMember "1" *-- "1" MecanographicNumber : identified by
    StaffMember "1" *-- "1" ContactDetails : has
    StaffMember "1" *-- "1" OperationalWindow : has
    StaffMember "1" *-- "1" StaffStatus : has current
}

package "Qualification Aggregate" {
    class Qualification <<(A,orchid) Root>> {
        +Code: QualificationCode
        +Name: QualificationName
        ..
    }
     class QualificationCode <<(V,DarkSeaGreen)>>
     class QualificationName <<(V,DarkSeaGreen)>>
}

' Relationship: StaffMember holds references to Qualifications
StaffMember "1" -- "*" Qualification : possesses >

@enduml